--- a/ShoppingApp/app/src/main/AndroidManifest.xml
+++ b/ShoppingApp/app/src/main/AndroidManifest.xml
@@ -2,12 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hola.shoppingapp">
 
+    <!-- Como es una subclase de Aplication, android lo iniciará cuando cree la aplicación -->
+    <!-- El punto significa que usa el default package -->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".TiendasApplication">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
