Libreria externa Gson, guardar a fichero y shared preferences
Usamos la libreria Gson para guardar un json con las Tiendas. Añadimos
SharedPreferences a TiendaApplication para guardar las preferencias de
la aplicación como el tipo de backup.

--- a/ShoppingApp/app/src/main/AndroidManifest.xml
+++ b/ShoppingApp/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".EditTienda"
             android:label="@string/title_activity_edit_tienda"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MenuFrecuencia"></activity>
     </application>
 
 </manifest>
