--- a/ShoppingApp/app/src/main/AndroidManifest.xml
+++ b/ShoppingApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hola.shoppingapp">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -38,7 +39,12 @@
             android:name=".TiendasContentProvider"
             android:authorities="com.example.hola.shoppingapp"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:exported="true" />
+
+        <service
+            android:name=".LocationUpdateService"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
