Creación de Build Types para diferentes versiones de nuestra app

--- a/ShoppingApp/app/build.gradle
+++ b/ShoppingApp/app/build.gradle
@@ -13,7 +13,13 @@ android {
     }
     buildTypes {
         release {
+            minifyEnabled true
+            buildConfigField "String" , "SERVER_URL", '"http://release.myapp.com"'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
+            buildConfigField "String" , "SERVER_URL", '"http://dev.myapp.com"'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
